не прячется кнопка в каталоге у морож и крошки не слева

--- a/catalog.html
+++ b/catalog.html
@@ -26,6 +26,15 @@
 				<a class="login" href="#">Вход</a>
 				<a class="basket" href="#">2 товара</a>
 			</div>
+				<!--Блок хлебных крошек-->
+			<div class="breadcrumbs">
+				<ul class="bread-main-nav">
+					<li><a href="#">Главная</a></li>
+					<li><a href="#">Каталог</a></li>
+					<li><a href="#">Сливочное</a></li>
+				</ul>
+			<!--/Блок хлебных крошек-->
+			</div>
 			<div class="timework-tel">
 				<span class="timework">С 10 до 20, ежедневно</span><br>
 				<span class="tel">8 812 450-25-25</span>
@@ -35,18 +44,10 @@
 	</header>
 	<!--Содержание основного блока-->
 	<main class="container">
-	<!--Блок хлебных крошек-->
-	<div class="breadcrumbs">
-		<ul class="bread-main-nav">
-			<li><a href="#">Главная</a></li>
-			<li><a href="#">Каталог</a></li>
-			<li><a href="#">Сливочное</a></li>
-		</ul>
-	<!--/Блок хлебных крошек-->
-	</div>
+
 	<!--Блок выбора мороженных - фильтр-->
 	<div class="selection-ice clearfix">
-		<h2>Сливочное мороженное</h2>
+		<h2>Сливочное мороженое</h2>
 		<form action="https://echo.htmlacademy.ru" method="get" enctype="multipart/form-data" oninput="ruoutput.value=rucount.value">
 			<div class="sorting">
 				<label class="choice" for="sorting">Сортировка:</label><br>
@@ -97,97 +98,97 @@
 	<div class="goods clearfix">
 			<div class="case-catalog">
 				<img src="img/ice_1.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
-				<span class="cost">310 <img src="img/rur.png" width="27" height="32" alt="Символ рубля"> / кг</span>
+				<span class="cost">310<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля">/кг</span></span>
 				<a class="specification" href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
-				<div>
+				<div class="btn-hover-shadow">	
 				<a class="btn-show-catalog" href="#" class="fastsee">Быстрый просмотр</a>
 				</div>
 			</div>
 			<div class="case-catalog">
 				<img src="img/ice_2.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
-				<span class="cost">380 <img src="img/rur.png" width="27" height="32" alt="Символ рубля"> / кг</span>
-				<a class="specification" href="#">Сливочно-кофейное с кусочками шоколада</a>
-				<div>
+				<span class="cost">380<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля">/кг</span></span>
+				<a class="specification" href="#">Сливочно-кофейное с кусочками шоколада</a><br>
+				<div class="btn-hover-shadow">
 				<a class="btn-show-catalog" href="#" class="fastsee">Быстрый просмотр</a>
 				</div>
 			</div>
 			<div class="case-catalog">
 				<img src="img/ice_3.jpg" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
-				<span class="cost">355 <img src="img/rur.png" width="27" height="32" alt="Символ рубля"> / кг</span>
+				<span class="cost">355<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля">/кг</span></span>
 				<a class="specification" href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
-				<div>
+				<div class="btn-hover-shadow">
 				<a class="btn-show-catalog" href="#" class="fastsee">Быстрый просмотр</a>
-				</div>
+				</div>	
 			</div>
 			<div class="case-catalog">
 				<img src="img/ice_4.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
-				<span class="cost">415 <img src="img/rur.png" width="27" height="32" alt="Символ рубля"> / кг</span>
+				<span class="cost">415<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля">/кг</span></span>
 				<a class="specification" href="#">Сливочное крем-брюле с карамельной подливкой</a>
-				<div>
+				<div class="btn-hover-shadow">
 				<a class="btn-show-catalog" href="#" class="fastsee">Быстрый просмотр</a>
 				</div>
 			</div>
 			<div class="case-catalog">
 				<img src="img/ice_5.jpg" width="267" height="267" alt="Сливочное с брусничным джемом">
-				<span class="cost">325 <img src="img/rur.png" width="27" height="32" alt="Символ рубля"> / кг</span>
+				<span class="cost">325<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля"> / кг</span></span>
 				<a class="specification" href="#">Сливочное с брусничным джемом</a>
-				<div>
+				<div class="btn-hover-shadow">
 				<a class="btn-show-catalog" href="#" class="fastsee">Быстрый просмотр</a>
 				</div>
 			</div>
 			<div class="case-catalog">
 				<img src="img/ice_6.jpg" width="267" height="267" alt="Сливочно-черничное с цельными ягодами черники">
-				<span class="cost">410 <img src="img/rur.png" width="27" height="32" alt="Символ рубля"> / кг</span>
+				<span class="cost">410<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля"> / кг</span></span>
 				<a class="specification" href="#">Сливочно-черничное с цельными ягодами черники</a>
-				<div>
+				<div class="btn-hover-shadow">
 				<a class="btn-show-catalog" href="#" class="fastsee">Быстрый просмотр</a>
 				</div>
 			</div>
 			<div class="case-catalog">
 				<img src="img/ice_7.jpg" width="267" height="267" alt="Сливочно-лимонное с карамельной присыпкой">
-				<span class="cost">375 <img src="img/rur.png" width="27" height="32" alt="Символ рубля"> / кг</span>
+				<span class="cost">375<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля"> / кг</span></span>
 				<a class="specification" href="#">Сливочно-лимонное с карамельной присыпкой</a>
-				<div>
+				<div class="btn-hover-shadow">
 				<a class="btn-show-catalog" class="specification" href="#" class="fastsee">Быстрый просмотр</a>
 				</div>
 			</div>
 			<div class="case-catalog">
 				<img src="img/ice_8.jpg" width="267" height="267" alt="Сливочное с шоколадной стружкой">
-				<span class="cost">320 <img src="img/rur.png" width="27" height="32" alt="Символ рубля"> / кг</span>
+				<span class="cost">320<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля"> / кг</span></span>
 				<a class="specification" href="#">Сливочное с шоколадной стружкой</a>
-				<div>
+				<div class="btn-hover-shadow">
 				<a class="btn-show-catalog" href="#" class="fastsee">Быстрый просмотр</a>
 				</div>
 			</div>
 			<div class="case-catalog">
 				<img src="img/ice_9.jpg" width="267" height="267" alt="Сливочно-ванильное с кусочками шоколада">
-				<span class="cost">440 <img src="img/rur.png" width="27" height="32" alt="Символ рубля"> / кг</span>
+				<span class="cost">440<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля"> / кг</span></span>
 				<a class="specification" href="#">Сливочно-ванильное с кусочками шоколада</a>
-				<div>
+				<div class="btn-hover-shadow">
 				<a class="btn-show-catalog" href="#" class="fastsee">Быстрый просмотр</a>
 				</div>
 			</div>
 			<div class="case-catalog">
 				<img src="img/ice_10.jpg" width="267" height="267" alt="Сливочное с ментоловым сиропом">
-				<span class="cost">435 <img src="img/rur.png" width="27" height="32" alt="Символ рубля"> / кг</span>
+				<span class="cost">435<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля"> / кг</span></span>
 				<a class="specification" href="#">Сливочное с ментоловым сиропом</a>
-				<div>
+				<div class="btn-hover-shadow">
 				<a class="btn-show-catalog" href="#" class="fastsee">Быстрый просмотр</a>
 				</div>
 			</div>
 			<div class="case-catalog">
 				<img src="img/ice_11.jpg" width="267" height="267" alt="Сливочное с кусочками черного шоколада">
-				<span class="cost">355 <img src="img/rur.png" width="27" height="32" alt="Символ рубля"> / кг</span>
+				<span class="cost">355<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля"> / кг</span></span>
 				<a class="specification" href="#">Сливочное с кусочками черного шоколада</a>
-				<div>
+				<div class="btn-hover-shadow">
 				<a class="btn-show-catalog" href="#" class="fastsee">Быстрый просмотр</a>
 				</div>
 			</div>
 			<div class="case-catalog">
 				<img src="img/ice_12.jpg" width="267" height="267" alt="Сливочное с мятным сиропом">
-				<span class="cost">420 <img src="img/rur.png" width="27" height="32" alt="Символ рубля"> / кг</span>
+				<span class="cost">420<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля"> / кг</span></span>
 				<a class="specification" href="#">Сливочное с мятным сиропом</a>
-				<div>
+				<div class="btn-hover-shadow">
 				<a class="btn-show-catalog" href="#" class="fastsee">Быстрый просмотр</a>
 				</div>
 			</div>
