--- a/catalog.html
+++ b/catalog.html
@@ -101,7 +101,7 @@
 				<span class="cost">310<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля">/кг</span></span>
 				<a class="specification" href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
 				<div class="btn-hover-shadow">	
-				<a class="btn-show-catalog" href="#" class="fastsee">Быстрый просмотр</a>
+				<a class="btn-show-catalog" href="#">Быстрый просмотр</a>
 				</div>
 			</div>
 			<div class="case-catalog">
@@ -109,7 +109,7 @@
 				<span class="cost">380<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля">/кг</span></span>
 				<a class="specification" href="#">Сливочно-кофейное с кусочками шоколада</a><br>
 				<div class="btn-hover-shadow">
-				<a class="btn-show-catalog" href="#" class="fastsee">Быстрый просмотр</a>
+				<a class="btn-show-catalog" href="#">Быстрый просмотр</a>
 				</div>
 			</div>
 			<div class="case-catalog">
@@ -117,7 +117,7 @@
 				<span class="cost">355<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля">/кг</span></span>
 				<a class="specification" href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
 				<div class="btn-hover-shadow">
-				<a class="btn-show-catalog" href="#" class="fastsee">Быстрый просмотр</a>
+				<a class="btn-show-catalog" href="#">Быстрый просмотр</a>
 				</div>	
 			</div>
 			<div class="case-catalog">
@@ -125,7 +125,7 @@
 				<span class="cost">415<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля">/кг</span></span>
 				<a class="specification" href="#">Сливочное крем-брюле с карамельной подливкой</a>
 				<div class="btn-hover-shadow">
-				<a class="btn-show-catalog" href="#" class="fastsee">Быстрый просмотр</a>
+				<a class="btn-show-catalog" href="#">Быстрый просмотр</a>
 				</div>
 			</div>
 			<div class="case-catalog">
@@ -133,7 +133,7 @@
 				<span class="cost">325<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля"> / кг</span></span>
 				<a class="specification" href="#">Сливочное с брусничным джемом</a>
 				<div class="btn-hover-shadow">
-				<a class="btn-show-catalog" href="#" class="fastsee">Быстрый просмотр</a>
+				<a class="btn-show-catalog" href="#">Быстрый просмотр</a>
 				</div>
 			</div>
 			<div class="case-catalog">
@@ -141,7 +141,7 @@
 				<span class="cost">410<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля"> / кг</span></span>
 				<a class="specification" href="#">Сливочно-черничное с цельными ягодами черники</a>
 				<div class="btn-hover-shadow">
-				<a class="btn-show-catalog" href="#" class="fastsee">Быстрый просмотр</a>
+				<a class="btn-show-catalog" href="#">Быстрый просмотр</a>
 				</div>
 			</div>
 			<div class="case-catalog">
@@ -149,7 +149,7 @@
 				<span class="cost">375<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля"> / кг</span></span>
 				<a class="specification" href="#">Сливочно-лимонное с карамельной присыпкой</a>
 				<div class="btn-hover-shadow">
-				<a class="btn-show-catalog" class="specification" href="#" class="fastsee">Быстрый просмотр</a>
+				<a class="btn-show-catalog" href="#">Быстрый просмотр</a>
 				</div>
 			</div>
 			<div class="case-catalog">
@@ -157,7 +157,7 @@
 				<span class="cost">320<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля"> / кг</span></span>
 				<a class="specification" href="#">Сливочное с шоколадной стружкой</a>
 				<div class="btn-hover-shadow">
-				<a class="btn-show-catalog" href="#" class="fastsee">Быстрый просмотр</a>
+				<a class="btn-show-catalog" href="#">Быстрый просмотр</a>
 				</div>
 			</div>
 			<div class="case-catalog">
@@ -165,7 +165,7 @@
 				<span class="cost">440<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля"> / кг</span></span>
 				<a class="specification" href="#">Сливочно-ванильное с кусочками шоколада</a>
 				<div class="btn-hover-shadow">
-				<a class="btn-show-catalog" href="#" class="fastsee">Быстрый просмотр</a>
+				<a class="btn-show-catalog" href="#">Быстрый просмотр</a>
 				</div>
 			</div>
 			<div class="case-catalog">
@@ -173,7 +173,7 @@
 				<span class="cost">435<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля"> / кг</span></span>
 				<a class="specification" href="#">Сливочное с ментоловым сиропом</a>
 				<div class="btn-hover-shadow">
-				<a class="btn-show-catalog" href="#" class="fastsee">Быстрый просмотр</a>
+				<a class="btn-show-catalog" href="#">Быстрый просмотр</a>
 				</div>
 			</div>
 			<div class="case-catalog">
@@ -181,7 +181,7 @@
 				<span class="cost">355<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля"> / кг</span></span>
 				<a class="specification" href="#">Сливочное с кусочками черного шоколада</a>
 				<div class="btn-hover-shadow">
-				<a class="btn-show-catalog" href="#" class="fastsee">Быстрый просмотр</a>
+				<a class="btn-show-catalog" href="#">Быстрый просмотр</a>
 				</div>
 			</div>
 			<div class="case-catalog">
@@ -189,7 +189,7 @@
 				<span class="cost">420<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля"> / кг</span></span>
 				<a class="specification" href="#">Сливочное с мятным сиропом</a>
 				<div class="btn-hover-shadow">
-				<a class="btn-show-catalog" href="#" class="fastsee">Быстрый просмотр</a>
+				<a class="btn-show-catalog" href="#">Быстрый просмотр</a>
 				</div>
 			</div>
 			<div class="catalog-pages">
