сделал пиксел перфект

--- a/catalog.html
+++ b/catalog.html
@@ -16,15 +16,15 @@
 			</div>
 			<nav class="main-navigation">
 			  <ul class="main-nav">
-				<li ><a class="active" href="#">Каталог</a></li>
-				<li class="li-2"><a href="#">Доставка и оплата</a></li>
-				<li class="li-3"><a href="#">О Компании</a></li>
+				<li><a class="active" href="#">Каталог</a></li>
+				<li class="border-li-two"><a href="#">Доставка и оплата</a></li>
+				<li class="border-li-tree"><a href="#">О Компании</a></li>
 			  </ul>
 			</nav>
-			<div class="user-block">
+			<div class="user-block ">
 				<a class="search" href="#">Поиск</a>
 				<a class="login" href="#">Вход</a>
-				<a class="basket" href="#">2 товара</a>
+				<a class="basket-bye-ice" href="#">2 товара</a>
 			</div>
 				<!--Блок хлебных крошек-->
 			<div class="breadcrumbs">
@@ -52,7 +52,7 @@
 			<div class="sorting">
 				<label class="choice" for="sorting">Сортировка:</label><br>
 				<select name="sorting" id="sorting">
-					<option selected>по популярности</option>
+					<option selected>по популярности U+23F7</option>
 					<option>сначала недорогие</option>
 					<option>сначала дорогие</option>
 					<option>по жирности</option>
@@ -60,8 +60,8 @@
 			</div>
 			<div class="price-ice range-filter">
 				<div class="price-controls">
-					<label class="min-price choice">Цена:<input name="min-price" type="text" value="100"> руб.</label>
-					<label class="max-price choice">-<input name="max-price" type="text" value="500"> руб.</label>
+					<label class="min-price choice">Цена:<input type="text" name="min-price" value="100"> руб.</label>
+					<label class="max-price choice">- <input  type="text" name="max-price" value="500"> руб.</label>
 				</div>
 				<div class="range-controls">
 					<div class="scale">
@@ -130,7 +130,7 @@
 			</div>
 			<div class="case-catalog">
 				<img src="img/ice_5.jpg" width="267" height="267" alt="Сливочное с брусничным джемом">
-				<span class="cost">325<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля"> / кг</span></span>
+				<span class="cost">325<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля">/кг</span></span>
 				<a class="specification" href="#">Сливочное с брусничным джемом</a>
 				<div class="btn-hover-shadow">
 				<a class="btn-show-catalog" href="#">Быстрый просмотр</a>
@@ -138,7 +138,7 @@
 			</div>
 			<div class="case-catalog">
 				<img src="img/ice_6.jpg" width="267" height="267" alt="Сливочно-черничное с цельными ягодами черники">
-				<span class="cost">410<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля"> / кг</span></span>
+				<span class="cost">410<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля">/кг</span></span>
 				<a class="specification" href="#">Сливочно-черничное с цельными ягодами черники</a>
 				<div class="btn-hover-shadow">
 				<a class="btn-show-catalog" href="#">Быстрый просмотр</a>
@@ -146,7 +146,7 @@
 			</div>
 			<div class="case-catalog">
 				<img src="img/ice_7.jpg" width="267" height="267" alt="Сливочно-лимонное с карамельной присыпкой">
-				<span class="cost">375<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля"> / кг</span></span>
+				<span class="cost">375<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля">/кг</span></span>
 				<a class="specification" href="#">Сливочно-лимонное с карамельной присыпкой</a>
 				<div class="btn-hover-shadow">
 				<a class="btn-show-catalog" href="#">Быстрый просмотр</a>
@@ -154,7 +154,7 @@
 			</div>
 			<div class="case-catalog">
 				<img src="img/ice_8.jpg" width="267" height="267" alt="Сливочное с шоколадной стружкой">
-				<span class="cost">320<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля"> / кг</span></span>
+				<span class="cost">320<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля">/кг</span></span>
 				<a class="specification" href="#">Сливочное с шоколадной стружкой</a>
 				<div class="btn-hover-shadow">
 				<a class="btn-show-catalog" href="#">Быстрый просмотр</a>
@@ -162,7 +162,7 @@
 			</div>
 			<div class="case-catalog">
 				<img src="img/ice_9.jpg" width="267" height="267" alt="Сливочно-ванильное с кусочками шоколада">
-				<span class="cost">440<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля"> / кг</span></span>
+				<span class="cost">440<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля">/кг</span></span>
 				<a class="specification" href="#">Сливочно-ванильное с кусочками шоколада</a>
 				<div class="btn-hover-shadow">
 				<a class="btn-show-catalog" href="#">Быстрый просмотр</a>
@@ -170,7 +170,7 @@
 			</div>
 			<div class="case-catalog">
 				<img src="img/ice_10.jpg" width="267" height="267" alt="Сливочное с ментоловым сиропом">
-				<span class="cost">435<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля"> / кг</span></span>
+				<span class="cost">435<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля">/кг</span></span>
 				<a class="specification" href="#">Сливочное с ментоловым сиропом</a>
 				<div class="btn-hover-shadow">
 				<a class="btn-show-catalog" href="#">Быстрый просмотр</a>
@@ -178,7 +178,7 @@
 			</div>
 			<div class="case-catalog">
 				<img src="img/ice_11.jpg" width="267" height="267" alt="Сливочное с кусочками черного шоколада">
-				<span class="cost">355<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля"> / кг</span></span>
+				<span class="cost">355<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля">/кг</span></span>
 				<a class="specification" href="#">Сливочное с кусочками черного шоколада</a>
 				<div class="btn-hover-shadow">
 				<a class="btn-show-catalog" href="#">Быстрый просмотр</a>
@@ -186,7 +186,7 @@
 			</div>
 			<div class="case-catalog">
 				<img src="img/ice_12.jpg" width="267" height="267" alt="Сливочное с мятным сиропом">
-				<span class="cost">420<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля"> / кг</span></span>
+				<span class="cost">420<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля">/кг</span></span>
 				<a class="specification" href="#">Сливочное с мятным сиропом</a>
 				<div class="btn-hover-shadow">
 				<a class="btn-show-catalog" href="#">Быстрый просмотр</a>
@@ -208,7 +208,7 @@
 	</div>
 	</main>
 	<!--Блок подвала-->
-	<footer>
+	<footer class="footer-catalog">
 		<div class="container clearfix">
 			<section class="footer-social">
 				<a class="social-btn social-btn-tv" href="#">Твиттер</a>
@@ -230,7 +230,7 @@
 				<p>Сделано в <a href="https://htmlacademy.ru">HTML Academy</a> © 2016</p>
 			</section>
 		</div>
-	</footer>
+	</footer><!--/Блок подвала-->
 	<!--Модальные формы-->
 		<!--Форма поиска-->
 	<div class="modal-search">
@@ -250,6 +250,24 @@
 			<a class="registration" href="#">Новая регистрация</a>
 		</section>
     </div><!--Форма входа-->
-	<!--/Блок подвала-->
+		<!--Форма наличия товара в корзине-->
+	<div class="order-in-basket">
+		<form>
+			<section class="ice-order">
+				<input type="checkbox" name="ice-order" id="order-one" checked><label class="name-ice-order" for="order-one">Пломбир с апельсиновым джемом</label>
+				<label>1,5 кг х </label><input type="text" name="grey-price"value="300"><label>руб.</label><input type="text" name="price" value="300"><label>руб.</label>
+			</section>
+			<section class="ice-order">
+				<input type="checkbox" name="ice-order" id="order-one" checked><label class="name-ice-order" for="order-one">Клубничный пломбир с присыпкой из белого шоколада</label>
+				<label>1,5 кг х </label><input type="text" name="grey-price"value="300"><label>руб.</label><input type="text" name="price" value="450"><label>руб.</label>
+			</section>
+			<!--<ul class="number-ice-in">
+				<li>Пломбир с апельсиновым джемом 1,5 кг х 200 руб. 300 руб.</li>
+				<li>Клубничный пломбир с присыпкой из белого шоколада 1,5кг 300 руб. 450 руб.</li>
+			</ul>-->
+			<label>Итого:<input type="text" name="total price" value="750"> руб.</label>
+			<button class="btn-make-order" type="submit" title="Оформить заказ">Оформить заказ</button>
+		</form>
+	</div>
   </body>
 </html>
