--- a/index.html
+++ b/index.html
@@ -20,9 +20,17 @@
 			</div>
 			<nav class="main-navigation">
 			  <ul class="main-nav">
-				<li class="li-1"><a href="#">Каталог</a></li>
-				<li class="li-2"><a href="#">Доставка и оплата</a></li>
-				<li class="li-3"><a href="#">О Компании</a></li>
+				<li class="border-li-one"><a href="#">Каталог</a>
+					<ul class="sub-menu-catalog">
+						<li><a href="#">Новинки</a></li>
+						<li><a href="./catalog.html">Сливочное</a></li>
+						<li><a href="#">Щербеты</a></li>
+						<li><a href="#">Фрукторый лед</a></li>
+						<li><a href="#">Мелорин</a></li>
+						</li>
+					</ul>
+				<li class="border-li-two"><a href="#">Доставка и оплата</a></li>
+				<li class="border-li-tree"><a href="#">О Компании</a></li>
 			  </ul>
 			</nav>
 			<div class="user-block">
@@ -79,31 +87,43 @@
 			<img src="img/ice_1.jpg" width="267" height="267" class="big-ice" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
 			<span class="cost">310<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля">/кг</span></span>
 			<p class="specification underline">Сливочное с апельсиновым джемом и цитрусовой стружкой</p><!--Это ссылка скорее?-->
+			<div class="btn-hover-shadow">
+				<a class="btn-show-catalog" href="#">Быстрый просмотр</a>
+			</div>
 		</section>	
 		<section class="catalog-ice">
 			<span class="tag"><img src="img/hit.png" width="61" height="61" alt="Значек покупаемого мороженного"></span> 
 			<img src="img/ice_2.jpg" width="267" height="267" class="big-ice" alt="Сливочно-кофейное с кусочками шоколада">
 			<span class="cost">380<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля">/кг</span></span>
 			<p class="specification">Сливочно-кофейное с кусочками шоколада</p><!--Это ссылка скорее?-->
+			<div class="btn-hover-shadow">
+				<a class="btn-show-catalog" href="#">Быстрый просмотр</a>
+			</div>
 		</section>
 		<section class="catalog-ice">
 			<span class="tag"><img src="img/hit.png" width="61" height="61" alt="Значек покупаемого мороженного"></span>
 			<img src="img/ice_3.jpg" width="267" height="267" class="big-ice" alt="Сливочно-клубничное с присыпкой из белого шоколада">
 			<span class="cost">355<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля">/кг</span></span>
 			<p class="specification">Сливочно-клубничное с присыпкой из белого шоколада</p><!--Это ссылка скорее?-->
+			<div class="btn-hover-shadow">
+				<a class="btn-show-catalog" href="#">Быстрый просмотр</a>
+			</div>
 		</section>
 		<section class="catalog-ice">
 			<span class="tag"><img src="img/hit.png" width="61" height="61" alt="Значек покупаемого мороженного"></span>
 			<img src="img/ice_4.jpg" width="265" height="265" class="big-ice" alt="Сливочное крем-брюле с карамельной подливкой">
 			<span class="cost">415<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля">/кг</span></span>
 			<p class="specification">Сливочное крем-брюле с карамельной подливкой</p><!--Это ссылка скорее?-->
+			<div class="btn-hover-shadow">
+				<a class="btn-show-catalog" href="#">Быстрый просмотр</a>
+			</div>
 		</section>
 	<!--/Блок самых покупаемых мороженных-->
 	</div>
 	<!--Блок описания компании-->
 	<div class="description clearfix">
 		<div class="about">
-			<span>Магазин Глейси - это онлайн и офлайн магазин по продаже мороженого собственного производства на развес</span>
+			<span>Магазин Глейси &mdash; это онлайн и офлайн магазин по продаже мороженого собственного производства на развес</span>
 		</div>
 		<div class="make">
 			<p>Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</p>
@@ -111,7 +131,7 @@
 		</div>
 		<div class="delivery"> <!--delivery доставка-->
 			<p>Закупка ингредиентов производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
-			<p>Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить свой превосходный вкус.</p>
+			<p>Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</p>
 		</div>
 	<!--/Блок описания компании-->
 	</div>
