Исправил ошибки после валидатора

--- a/catalog.html
+++ b/catalog.html
@@ -52,7 +52,7 @@
 			<div class="sorting">
 				<label class="choice" for="sorting">Сортировка:</label><br>
 				<select name="sorting" id="sorting">
-					<option selected>по популярности U+23F7</option>
+					<option selected>по популярности</option>
 					<option>сначала недорогие</option>
 					<option>сначала дорогие</option>
 					<option>по жирности</option>
@@ -195,11 +195,11 @@
 			<div class="catalog-pages">
 				<ul class="pages-ices">
 					<li><a class="prev disabled" href="#prev">Назад</a></li>
-					<li><a class="active-page hover" href"#">1</a></li>
-					<li><a class="hover" href"#">2</a></li>
-					<li><a class="hover" href"#">3</a></li>
-					<li><a class="hover" href"#">4</a></li>
-					<li><a class="hover" href"#">5</a></li>
+					<li><a class="active-page hover" href="#">1</a></li>
+					<li><a class="hover" href="#">2</a></li>
+					<li><a class="hover" href="#">3</a></li>
+					<li><a class="hover" href="#">4</a></li>
+					<li><a class="hover" href="#">5</a></li>
 					<li><a class="next" href="#next">Вперёд</a></li>
 				</ul>
 			</div>
@@ -255,11 +255,11 @@
 		<form>
 			<section class="ice-order">
 				<input type="checkbox" name="ice-order" id="order-one" checked><label class="name-ice-order" for="order-one">Пломбир с апельсиновым джемом</label>
-				<label>1,5 кг х </label><input type="text" name="grey-price"value="300"><label>руб.</label><input type="text" name="price" value="300"><label>руб.</label>
+				<label>1,5 кг х </label><input type="text" name="grey-price" value="300"><label>руб.</label><input type="text" name="price" value="300"><label>руб.</label>
 			</section>
 			<section class="ice-order">
-				<input type="checkbox" name="ice-order" id="order-one" checked><label class="name-ice-order" for="order-one">Клубничный пломбир с присыпкой из белого шоколада</label>
-				<label>1,5 кг х </label><input type="text" name="grey-price"value="300"><label>руб.</label><input type="text" name="price" value="450"><label>руб.</label>
+				<input type="checkbox" name="ice-order" id="order-two" checked><label class="name-ice-order" for="order-one">Клубничный пломбир с присыпкой из белого шоколада</label>
+				<label>1,5 кг х </label><input type="text" name="grey-price" value="300"><label>руб.</label><input type="text" name="price" value="450"><label>руб.</label>
 			</section>
 			<!--<ul class="number-ice-in">
 				<li>Пломбир с апельсиновым джемом 1,5 кг х 200 руб. 300 руб.</li>
